--- a/headsteward.html
+++ b/headsteward.html
@@ -297,6 +297,8 @@
 
     <div class="row">
       <button id="backBtn">Back to Classifier</button>
+      <!-- NEW: direct link to SimGrid Overview -->
+      <button id="overviewBtn">SimGrid Overview</button>
       <button id="logoutBtn">Sign out</button>
     </div>
   </header>
@@ -898,6 +900,8 @@ No reviews submitted yet.`;
 
     // ---------- navigation ----------
     $("backBtn").onclick = () => window.location.href = "index.html";
+    // NEW: SimGrid Overview button
+    $("overviewBtn").onclick = () => window.location.href = "overview.html";
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
     $("refreshTicketsBtn").onclick = () => loadTickets();
     $("refreshStatementsBtn").onclick = () => loadStatements();
