--- a/overview.html
+++ b/overview.html
@@ -55,6 +55,7 @@
 
     button{padding:10px 12px; border:1px solid #d1d5db; border-radius:12px; background:#fff; cursor:pointer;}
     button.primary{background:#111827;color:#fff;border-color:#111827;}
+    button.danger{background:#991b1b;color:#fff;border-color:#991b1b;}
     button:disabled{opacity:0.6;cursor:not-allowed;}
 
     select, input{
@@ -81,7 +82,7 @@
       width:100%;
       border-collapse:separate;
       border-spacing:0;
-      min-width:1100px;
+      min-width:1280px; /* slightly wider due to new columns */
     }
     th, td{
       padding:10px;
@@ -117,6 +118,7 @@
     }
     .tag.ok{border-color:#86efac;background:#ecfdf5;color:#065f46;}
     .tag.bad{border-color:#fca5a5;background:#fef2f2;color:#991b1b;}
+    .tag.neutral{border-color:#d1d5db;background:#f9fafb;color:#111827;}
 
     .toast{
       position:fixed; right:16px; bottom:16px;
@@ -130,12 +132,78 @@
     }
     .toast.show{opacity:1; transform: translateY(0);}
 
+    /* Modal */
+    .modalOverlay{
+      position:fixed;
+      inset:0;
+      background:rgba(2,6,23,0.72);
+      display:none;
+      align-items:center;
+      justify-content:center;
+      padding:16px;
+      z-index:9998;
+    }
+    .modalOverlay.show{display:flex;}
+    .modal{
+      width:min(560px, 100%);
+      background:#fff;
+      border-radius:16px;
+      border:1px solid #e5e7eb;
+      box-shadow:0 18px 48px rgba(0,0,0,0.30);
+      overflow:hidden;
+    }
+    .modalHeader{
+      padding:12px 14px;
+      background:#111827;
+      color:#fff;
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:12px;
+    }
+    .modalTitle{
+      font-weight:900;
+      font-size:14px;
+      line-height:1.2;
+      margin:0;
+    }
+    .modalBody{padding:14px;}
+    .modalBody p{margin:0 0 10px 0; font-size:13px; color:#111827;}
+    .modalBody .muted{font-size:12px;}
+    .modalFooter{
+      padding:12px 14px;
+      background:#f9fafb;
+      border-top:1px solid #e5e7eb;
+      display:flex;
+      justify-content:flex-end;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .miniGrid{
+      display:grid;
+      grid-template-columns: 140px 1fr;
+      gap:8px 10px;
+      margin-top:10px;
+      font-size:13px;
+    }
+    .miniGrid .k{color:#6b7280; font-size:12px;}
+    .miniGrid .v{color:#111827;}
+    .kbd{
+      font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
+      font-size:12px;
+      border:1px solid #e5e7eb;
+      background:#f9fafb;
+      padding:2px 6px;
+      border-radius:6px;
+      white-space:nowrap;
+    }
+
     @media (max-width: 980px){
       body{background-attachment:scroll;}
       header{flex-direction:column; align-items:stretch;}
       header .row{width:100%;}
       header button{width:100%;}
-      table{min-width:980px;}
+      table{min-width:1120px;}
     }
   </style>
 </head>
@@ -170,6 +238,7 @@
         <div class="row">
           <span class="pill" id="countPill">Loading…</span>
           <span class="pill" id="modePill">Mode: …</span>
+          <span class="pill" id="permPill">Permissions: …</span>
         </div>
 
         <div class="row">
@@ -184,7 +253,8 @@
       </div>
 
       <div class="muted" style="margin-top:8px;">
-        Shows finalised tickets. Greenlit means Head Steward has approved it for Discord publishing.
+        Shows finalised tickets. Greenlit means Head Steward has approved it for publishing.
+        <span id="headHint"></span>
       </div>
 
       <div class="tableWrap">
@@ -192,6 +262,8 @@
           <thead>
             <tr>
               <th>Greenlit</th>
+              <th>Actions</th>
+              <th>Audit</th>
               <th>Ticket</th>
               <th>Status</th>
               <th>Event</th>
@@ -214,6 +286,36 @@
   </div>
 
   <div class="toast" id="toast">Saved</div>
+
+  <!-- Confirmation Modal -->
+  <div class="modalOverlay" id="modalOverlay" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <div class="modalHeader">
+        <div>
+          <div class="modalTitle" id="modalTitle">Confirm action</div>
+          <div class="muted" id="modalSubtitle" style="color:rgba(255,255,255,0.85); margin-top:4px;"></div>
+        </div>
+        <button id="modalCloseBtn" aria-label="Close">✕</button>
+      </div>
+
+      <div class="modalBody">
+        <p id="modalBodyText">—</p>
+
+        <div class="miniGrid" id="modalMeta">
+          <!-- filled dynamically -->
+        </div>
+
+        <div class="muted" style="margin-top:10px;">
+          Tip: press <span class="kbd">Esc</span> to cancel.
+        </div>
+      </div>
+
+      <div class="modalFooter">
+        <button id="modalCancelBtn">Cancel</button>
+        <button id="modalConfirmBtn" class="primary">Confirm</button>
+      </div>
+    </div>
+  </div>
 
   <!-- Firebase compat -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -305,6 +407,8 @@
     // auth state
     let currentEmail = "";
     let roleText = "";
+    let isHeadSteward = false;
+    let isSimgrid = false;
 
     $("backBtn").onclick = () => window.location.href = "index.html";
     $("logoutBtn").onclick = async () => { await auth.signOut(); window.location.href = "admin.html"; };
@@ -314,14 +418,154 @@
     $("search").oninput = () => renderFiltered();
 
     let allRows = []; // cached ticket objects
+    let busyIds = new Set(); // disable buttons while updating
 
     function matchesSearch(t, q){
       if (!q) return true;
       const s = q.toLowerCase().trim();
       const hay = [
-        t.id, t.status, t.event, t.competition, t.accused, t.reporter, t.track, t.stewardDecision, t.postRaceCode, t.ruleBreach
+        t.id, t.status, t.event, t.competition, t.accused, t.reporter, t.track,
+        t.stewardDecision, t.postRaceCode, t.ruleBreach,
+        t.simgridGreenlitBy, t.simgridRevokedBy
       ].map(x => String(x || "").toLowerCase()).join(" | ");
       return hay.includes(s);
+    }
+
+    /* ---------------------------
+       Modal helpers
+    ---------------------------- */
+    const modal = {
+      overlay: $("modalOverlay"),
+      title: $("modalTitle"),
+      subtitle: $("modalSubtitle"),
+      body: $("modalBodyText"),
+      meta: $("modalMeta"),
+      cancelBtn: $("modalCancelBtn"),
+      confirmBtn: $("modalConfirmBtn"),
+      closeBtn: $("modalCloseBtn"),
+      pending: null
+    };
+
+    function closeModal(){
+      modal.pending = null;
+      modal.overlay.classList.remove("show");
+      modal.overlay.setAttribute("aria-hidden", "true");
+      modal.confirmBtn.disabled = false;
+      modal.confirmBtn.classList.remove("danger");
+      modal.confirmBtn.classList.add("primary");
+      modal.confirmBtn.textContent = "Confirm";
+    }
+
+    function openModal({ title, subtitle, body, confirmText, confirmStyle, metaRows, onConfirm }){
+      modal.title.textContent = title || "Confirm action";
+      modal.subtitle.textContent = subtitle || "";
+      modal.body.textContent = body || "";
+      modal.meta.innerHTML = (metaRows || []).map(r => `
+        <div class="k">${escapeHtml(r.k)}</div>
+        <div class="v">${r.v}</div>
+      `).join("");
+
+      modal.confirmBtn.textContent = confirmText || "Confirm";
+      modal.confirmBtn.classList.remove("primary","danger");
+      modal.confirmBtn.classList.add(confirmStyle === "danger" ? "danger" : "primary");
+
+      modal.pending = onConfirm;
+
+      modal.overlay.classList.add("show");
+      modal.overlay.setAttribute("aria-hidden", "false");
+      modal.cancelBtn.focus();
+    }
+
+    modal.cancelBtn.onclick = closeModal;
+    modal.closeBtn.onclick = closeModal;
+    modal.overlay.addEventListener("click", (e) => {
+      if (e.target === modal.overlay) closeModal();
+    });
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && modal.overlay.classList.contains("show")) closeModal();
+    });
+    modal.confirmBtn.onclick = async () => {
+      if (!modal.pending) return closeModal();
+      try{
+        modal.confirmBtn.disabled = true;
+        await modal.pending();
+        closeModal();
+      }catch(err){
+        console.error(err);
+        toast("Action failed:\n" + (err?.message || err));
+        modal.confirmBtn.disabled = false;
+      }
+    };
+
+    /* ---------------------------
+       Firestore update helpers
+    ---------------------------- */
+    function serverNow(){
+      // Firestore server timestamp via compat:
+      return firebase.firestore.FieldValue.serverTimestamp();
+    }
+
+    async function setGreenlight(ticketId, makeGreenlit){
+      if (!isHeadSteward){
+        toast("Only Head Stewards can greenlight/revoke.");
+        return;
+      }
+      if (!ticketId) return;
+
+      if (busyIds.has(ticketId)) return;
+      busyIds.add(ticketId);
+      renderFiltered(); // refresh disables
+
+      try{
+        const ref = db.collection("tickets").doc(ticketId);
+        if (makeGreenlit){
+          await ref.update({
+            simgridGreenlit: true,
+            simgridGreenlitBy: currentEmail,
+            simgridGreenlitAt: serverNow(),
+            // clear revoke audit fields (optional)
+            simgridRevokedBy: firebase.firestore.FieldValue.delete(),
+            simgridRevokedAt: firebase.firestore.FieldValue.delete()
+          });
+          toast("Greenlit ✅");
+        } else {
+          await ref.update({
+            simgridGreenlit: false,
+            simgridRevokedBy: currentEmail,
+            simgridRevokedAt: serverNow()
+          });
+          toast("Revoked ✅");
+        }
+
+        await loadFinalised(); // reload fresh server values
+      } finally {
+        busyIds.delete(ticketId);
+        renderFiltered();
+      }
+    }
+
+    function auditText(t){
+      const green = !!t.simgridGreenlit;
+      if (green){
+        const who = t.simgridGreenlitBy ? escapeHtml(t.simgridGreenlitBy) : "—";
+        const when = t.simgridGreenlitAt ? escapeHtml(formatTimestamp(t.simgridGreenlitAt)) : "—";
+        return `
+          <span class="tag ok">Approved</span>
+          <div class="muted" style="margin-top:4px;">By: ${who}</div>
+          <div class="muted">At: ${when}</div>
+        `;
+      }
+      // not greenlit:
+      const revokedBy = t.simgridRevokedBy ? escapeHtml(t.simgridRevokedBy) : "";
+      const revokedAt = t.simgridRevokedAt ? escapeHtml(formatTimestamp(t.simgridRevokedAt)) : "";
+      if (revokedBy || revokedAt){
+        return `
+          <span class="tag bad">Revoked</span>
+          <div class="muted" style="margin-top:4px;">By: ${revokedBy || "—"}</div>
+          <div class="muted">At: ${revokedAt || "—"}</div>
+        `;
+      }
+      return `<span class="tag neutral">No audit</span><div class="muted" style="margin-top:4px;">Not yet approved.</div>`;
     }
 
     function renderFiltered(){
@@ -338,6 +582,9 @@
 
       $("countPill").innerHTML = `Tickets: <strong>${filtered.length}</strong>`;
       $("modePill").textContent = `Mode: ${mode === "all" ? "All finalised" : "Greenlit only"}`;
+      $("permPill").textContent = `Permissions: ${isHeadSteward ? "Head Steward" : "Read-only"}`;
+      $("headHint").textContent = isHeadSteward ? " You can approve/revoke tickets below." : "";
+
       $("hint").textContent = `Showing ${filtered.length} ticket(s).`;
 
       for (const t of filtered){
@@ -351,8 +598,37 @@
         const proof = (t.proofUrl || "").trim();
         const proofLink = proof ? `<a href="${escapeHtml(proof)}" target="_blank" rel="noopener">Open</a>` : "—";
 
+        const isBusy = busyIds.has(t.id);
+        const canAct = isHeadSteward && !isBusy;
+
+        // actions (head steward only)
+        let actionHtml = "—";
+        if (isHeadSteward){
+          if (green){
+            actionHtml = `
+              <button class="danger" ${canAct ? "" : "disabled"} data-action="revoke" data-id="${escapeHtml(t.id)}">
+                Revoke
+              </button>
+            `;
+          } else {
+            actionHtml = `
+              <button class="primary" ${canAct ? "" : "disabled"} data-action="approve" data-id="${escapeHtml(t.id)}">
+                Greenlight
+              </button>
+            `;
+          }
+          if (isBusy){
+            actionHtml += `<div class="muted" style="margin-top:6px;">Updating…</div>`;
+          }
+        }
+
+        const auditHtml = auditText(t);
+
         tr.innerHTML = `
           <td>${greenTag}</td>
+          <td>${actionHtml}</td>
+          <td>${auditHtml}</td>
+
           <td class="mono">${escapeHtml(t.id)}</td>
           <td>${escapeHtml(t.status || "")}</td>
           <td>${escapeHtml(t.event || "")}</td>
@@ -368,6 +644,49 @@
 
         tbody.appendChild(tr);
       }
+
+      // wire row buttons (event delegation)
+      tbody.querySelectorAll("button[data-action]").forEach(btn => {
+        btn.onclick = () => {
+          if (!isHeadSteward) return toast("Read-only account.");
+          const id = btn.getAttribute("data-id");
+          const action = btn.getAttribute("data-action");
+          const ticket = allRows.find(x => x.id === id);
+          if (!ticket) return;
+
+          const metaRows = [
+            { k: "Ticket", v: `<span class="mono">${escapeHtml(ticket.id)}</span>` },
+            { k: "Event", v: escapeHtml(ticket.event || "—") },
+            { k: "Competition", v: escapeHtml(ticket.competition || "—") },
+            { k: "Accused", v: escapeHtml(ticket.accused || "—") },
+            { k: "Reporter", v: escapeHtml(ticket.reporter || "—") },
+            { k: "Penalty", v: `<b>${escapeHtml(ticketPenalty(ticket))}</b>` },
+            { k: "Status", v: escapeHtml(ticket.status || "—") }
+          ];
+
+          if (action === "approve"){
+            openModal({
+              title: "Greenlight ticket for publishing?",
+              subtitle: "Head Steward approval required",
+              body: "This will mark the ticket as approved for publishing. You can revoke later if needed.",
+              confirmText: "Greenlight",
+              confirmStyle: "primary",
+              metaRows,
+              onConfirm: async () => setGreenlight(id, true)
+            });
+          } else {
+            openModal({
+              title: "Revoke greenlight?",
+              subtitle: "This will remove publishing approval",
+              body: "This will mark the ticket as NOT greenlit. It will disappear from the 'Greenlit only' view.",
+              confirmText: "Revoke",
+              confirmStyle: "danger",
+              metaRows,
+              onConfirm: async () => setGreenlight(id, false)
+            });
+          }
+        };
+      });
     }
 
     async function loadFinalised(){
@@ -392,9 +711,14 @@
             stewardDecision: x.stewardDecision || "",
             proofUrl: x.proofUrl || "",
             timestamp: x.timestamp || null,
+
             simgridGreenlit: x.simgridGreenlit === true,
             simgridGreenlitBy: x.simgridGreenlitBy || "",
-            simgridGreenlitAt: x.simgridGreenlitAt || null
+            simgridGreenlitAt: x.simgridGreenlitAt || null,
+
+            // revoke audit (new)
+            simgridRevokedBy: x.simgridRevokedBy || "",
+            simgridRevokedAt: x.simgridRevokedAt || null
           };
         });
 
@@ -434,10 +758,11 @@
           const data = adminSnap.data() || {};
           roleText = String(data.role || "").toLowerCase();
 
-          const isSimgrid = roleText.includes("simgrid");
-          const isHead = roleText.includes("head") || data.headsteward === true || data.owner === true;
+          isSimgrid = roleText.includes("simgrid");
+          isHeadSteward = roleText.includes("head") || data.headsteward === true || data.owner === true;
 
-          if (!isSimgrid && !isHead){
+          // Keep access rules the same: SimGrid OR Head can view.
+          if (!isSimgrid && !isHeadSteward){
             toast("Access denied (simgrid only).");
             await auth.signOut();
             window.location.href = "admin.html";
@@ -446,8 +771,13 @@
 
           const nameGuess = (currentEmail.split("@")[0] || "").replace(/[._-]+/g, " ").trim();
           const niceName = nameGuess ? nameGuess.replace(/\b\w/g, c => c.toUpperCase()) : "Admin";
-          $("welcomeLine").textContent = `Welcome, ${niceName}. This page shows finalised tickets approved for SimGrid publishing.`;
+          $("welcomeLine").textContent =
+            isHeadSteward
+              ? `Welcome, ${niceName}. You can approve/revoke finalised tickets for publishing.`
+              : `Welcome, ${niceName}. This page shows finalised tickets approved for publishing.`;
+
           $("who").textContent = `Signed in as: ${currentEmail} | role: ${data.role || "admin"}`;
+          $("permPill").textContent = `Permissions: ${isHeadSteward ? "Head Steward" : "Read-only"}`;
 
           await loadFinalised();
         }catch(e){
