--- a/steward.html
+++ b/steward.html
@@ -361,7 +361,7 @@
 
           <!-- CHANGED: text only (no other UI changes) -->
           <div class="muted" style="margin-top:6px;">
-            Comments show the steward who posted them (masked) + time.
+            Please remain professional and respectful - Please rmemeber PATREONS can request audits.
           </div>
 
           <div id="discussionList" style="margin-top:10px; display:flex; flex-direction:column; gap:8px;"></div>
